# cybercache-cluster

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
cmake/: AddManual.cmake  C3Install.cmake  DiscoverPhpSdks.cmake  FindPHP.cmake
config/: CMakeLists.txt  README.md  cybercached.mdcfg  generate_md_cfg
debian/: changelog  control  copyright  cybercache-ce.install  cybercache-ce.postinst  cybercache-ce.postrm  cybercache-ce.preinst  cybercache-ee.install  cybercache-ee.postinst  cybercache-ee.prerm  cybercache-extension-ce.docs  cybercache-extension-ce.install  cybercache-extension-ee.install  cybercache-extension-ee.postinst  cybercache-extension-ee.postrm  rules
doc/: CMakeLists.txt  README.md  command_interface.md  protocol.md  version_upgrade.md  warmer.md
doc/attic/: command_actions.md  data_structures.md  php_extension.md
doc/magento/: magento_apis.md  magento_requirements.md  new_php_versions.md
doc/whitepaper/: whitepaper.md
lib/: README.md
lib/c3lib/: CMakeLists.txt  c3_build.h  c3_build_assert.cc  c3_build_assert.h  c3_build_defs.h  c3_compressor.cc  c3_compressor.h  c3_descriptor_vector.h  c3_epoll.cc  c3_epoll.h  c3_errors.cc  c3_errors.h  c3_file_base.cc  c3_file_base.h  c3_files.cc  c3_files.h  c3_hasher.cc  c3_hasher.h  c3_logger.cc  c3_logger.h  c3_memory.cc  c3_memory.h  c3_parser.cc  c3_parser.h  c3_profiler.cc  c3_profiler.h  c3_profiler_defs.cc  c3_profiler_defs.h  c3_queue.h  c3_signals.cc  c3_signals.h  c3_sockets.cc  c3_sockets.h  c3_sockets_io.cc  c3_sockets_io.h  c3_stackdump.cc  c3_stackdump.h  c3_string.cc  c3_string.h  c3_system.cc  (+33 more)
lib/c3lib/compressors/: engine_brotli.cc  engine_brotli.h  engine_lz4.cc  engine_lz4.h  engine_lzf.cc  engine_lzf.h  engine_lzham.cc  engine_lzham.h  engine_lzss3.cc  engine_lzss3.h  engine_snappy.cc  engine_snappy.h  engine_zlib.cc  engine_zlib.h  engine_zstd.cc  engine_zstd.h
lib/compression/brotli/: CMakeLists.txt
lib/compression/lz4/: CMakeLists.txt
lib/compression/lzf/: CMakeLists.txt
lib/compression/lzham/: CMakeLists.txt  lzham.h  lzham_core.h  lzham_threading.h  lzham_types.h
lib/compression/snappy/: CMakeLists.txt  snappy-stubs-public.h
lib/compression/zlib/: CMakeLists.txt  LICENSE
lib/compression/zstd/: CMakeLists.txt
lib/hashes/farmhash/: CMakeLists.txt
lib/hashes/murmurhash/: CMakeLists.txt  LICENSE
lib/hashes/spookyhash/: CMakeLists.txt  LICENSE
lib/hashes/xxhash/: CMakeLists.txt
lib/regex/pcre2/: CMakeLists.txt  config.h
packaging/: CMakeLists.txt  README.md  create_all_packages  create_package  create_source_package  get_magento2_extension  lintian-suppressed-tags-pre-2.5.50.lst  lintian-suppressed-tags.md  list_arguments  verify_deb_package
packaging/app/: README.md.c3p  check-cybercached  ping-cybercached  query-cybercached  restart-cybercached  start-cybercached  stop-cybercached  switch-server-version
packaging/deb_files/: changelog  copyright  deb_date  upstream-changelog
packaging/files/default/: cybercached
packaging/files/init.d/: cybercached
packaging/files/php-ini/: cybercache.ini
packaging/inst/: after_install  after_uninstall
packaging/stubs/: README.md  cybercache.php  update_phpstorm_stub_library
releases/: .gitignore
scripts/: README.md  c3mcp  c3p  c3p.cfg  c3p.md  c3p_test  c3p_test.txt  compile_doc  copy_extension_modules  project_line_count  switch_php_version
src/: README.md
src/client/: CMakeLists.txt  README.md  ext_errors.cc  ext_errors.h  ext_exceptions.cc  ext_exceptions.h  ext_functions.cc  ext_functions.h  ext_globals.cc  ext_globals.h  ext_resource.cc  ext_resource.h  extension.cc  extension.h  external_apis.cc  external_apis.h  generate_api_info  generate_api_stub  option_utils.cc  option_utils.h  regex_matcher.cc  regex_matcher.h  server_thunk.cc  server_thunk.h  test_cybercache_ext.php  test_cybercache_ext.sh
src/console/: CMakeLists.txt  README.md  command_help.cc  command_help.h  console_commands.cc  console_commands.h  key_defs.h  key_input.cc  key_input.h  line_editor.cc  line_editor.h  line_input.cc  line_input.h  main.cc  net_configuration.cc  net_configuration.h  server_api.cc  server_api.h  string_list.cc  string_list.h
src/magento1/: README.md
src/server/: CMakeLists.txt  README.md  cc_configuration.cc  cc_configuration.h  cc_entry_point.cc  cc_server.cc  cc_server.h  cc_server_queue.h  cc_signal_handler.cc  cc_signal_handler.h  cc_subsystems.cc  cc_subsystems.h  cc_worker_threads.cc  cc_worker_threads.h  ht_objects.cc  ht_objects.h  ht_optimizer.cc  ht_optimizer.h  ht_page_store.cc  ht_page_store.h  ht_session_store.cc  ht_session_store.h  ht_shared_buffers.cc  ht_shared_buffers.h  ht_stores.cc  ht_stores.h  ht_tag_manager.cc  ht_tag_manager.h  ls_logger.cc  ls_logger.h  ls_system_logger.cc  ls_system_logger.h  ls_utils.cc  ls_utils.h  mt_defs.cc  mt_defs.h  mt_events.cc  mt_events.h  mt_lockable_object.cc  mt_lockable_object.h  (+23 more)
src/utils/epoll/: CMakeLists.txt  README.md  main.cc
src/utils/pcre2/: CMakeLists.txt  README.md  main.c
src/utils/regexp/: CMakeLists.txt  README.md  main.cc
src/warmer/: CMakeLists.txt  README.md  c3logger.js  c3options.js  c3processor.js  c3urls.js  c3version.js.c3p  cybercachewarmer  dev-cybercachewarmer  dev-upgrade-version  options.txt  warmer.js
tests/: CMakeLists.txt  README.md  all-tests-no-shutdown.cfg  all-tests.cfg  console-help-test.cfg  console-test.cfg.c3p  dev-gdbserver-attach  dev-gdbserver-start  dev-start-console  dev-start-cybercache-server  dev-switch-edition  dev-test-console  dev-test-console-no-shutdown  dev-valgrind-start-server  dev-valgrind-test-console  optimize-network-settings  quick-test.cfg  server-fpc-test.cfg  server-option-test.cfg.c3p  server-session-test.cfg  server-test.cfg  start-console  start-cybercache-server  test-console  test-console-no-shutdown  test-extension
tests/config/: cybercached-test.cfg.c3p  local-test.cfg  remote-test.cfg
tests/data/: fpc-1.binlog  fpc-2.binlog  sample-record.txt  session-1.binlog  session-2.binlog
tests/extension/: test-extension.inc  test-extension.php
tests/logs/: .gitignore
(+16 files in other folders)
